# puzzles

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: check.yml  core_check.yml  web_check.yml  web_deploy.yml
assets/: .gitignore
core/: CMakeLists.txt
core/cmake/: check_ctad.cpp  check_set_contains.cpp
core/src/common/: arbitrary_container.h  containers.h  coroutines.h  defs.h  numbers.h  strings.cpp  strings.h
core/src/common/numbers/: integer.cpp  integer.h  integers.h  rational.cpp  rational.h
core/src/compat/: compare.h  defs.h  ranges.h
core/src/comsci/: constrained_ordering.cpp  constrained_ordering.h  runner.cpp  travelling_salesman.cpp  travelling_salesman_data.h
core/src/comsci/genetic/: crossover_strategies.h  genetic_algorithm.h  mutation_strategies.h
core/src/cpic/: runner.cpp
core/src/cpic/data/: easy.cpp  trivial.cpp
core/src/cpic/model/: board.cpp  board_builder.cpp  board_state.h
core/src/cpic/solver/: brute_force_board_solver.cpp  brute_force_board_solver.h  heuristic_board_solver.cpp  heuristic_board_solver.h
core/src/maths/: expressions.cpp  primes.h  runner.cpp  sequences.cpp  sequences.h  stepping_stones.h
core/src/maths/josephus/: arithmetic_solver.cpp
core/src/shurikens/: logger.cpp  logger.h  model.cpp  runner.cpp
core/src/shurikens/data/: data.h  real.cpp  trivial.cpp
core/src/shurikens/solver/: breadth_search_solver.cpp  breadth_search_solver.h  depth_search_solver.cpp
core/src/sudoku/: runner.h
core/src/sudoku/data/: board_data.h  easy.cpp
core/src/sudoku/solver/: brute_force_board_solver.h  heuristic_board_solver.cpp
core/src/sudoku/view/: board_logger.cpp
core/tests/common/: arbitrary_container_test.cpp  strings_test.cpp
core/tests/compat/: compare_test.cpp
core/tests/maths/: maths_expressions_test.cpp  maths_josephus_test.cpp  maths_sequences_test.cpp
src/: main.cpp
src/common/: arbitrary_container.h  assertions.h  collections.h  coroutines.h  file_reader.cpp  file_reader.h  memory.h  numbers.cpp  numbers.h  ranges.h  runners.h  set.h  strings.h  thread_safe_queue.h  twobitstorage.cpp  twobitstorage.h  views.h
src/common/numbers/: integer.cpp  integer.h  integers.h  rational.cpp  rational.h
src/compat/: compare.h  defs.h  set.h
src/comsci/: runner.h  travelling_salesman.cpp  travelling_salesman.h
src/comsci/genetic/: crossover_strategies.h  genetic_algorithm.h  mutation_strategies.h
src/cpic/: runner.cpp  runner.h
src/cpic/data/: board_data.h  easy.cpp  trivial.cpp
src/cpic/model/: base_model.h  board.cpp  board.h  board_builder.cpp  board_builder.h  board_state.cpp  board_state.h
src/cpic/solver/: board_solver.h  brute_force_board_solver.cpp  brute_force_board_solver.h  heuristic_board_solver.cpp  heuristic_board_solver.h
src/cpic/view/: board_logger.cpp  board_logger.h
src/data/: board_data.h  easy.cpp  easy.h  trivial.cpp
src/hangman/: game.cpp  game.h  word_repository.cpp  word_repository.h
src/hangman/player/: alpha_order_player.cpp  alpha_order_player.h  frequency_aware_player.cpp  frequency_aware_player.h  player.h  random_player.cpp  random_player.h
src/leetcode/: ex10_regex.cpp  ex10_regex.h  ex8_atoi.cpp  ex8_atoi.h
src/maths/: expressions.cpp  expressions.h  primes.h  runner.cpp  runner.h  sequences.cpp  sequences.h  stepping_stones.cpp
src/maths/josephus/: arithmetic_solver.cpp  simulation_solver.cpp  solver.h
src/minesweeper/data/: board_data.h
src/minesweeper/model/: board.cpp  board.h  board_state.cpp  board_state.h
src/minesweeper/solver/: brute_force_solver.cpp  brute_force_solver.h
src/minesweeper/view/: board_logger.cpp  board_logger.h
src/model/: base_model.h  board.cpp  board.h  board_builder.cpp  board_builder.h  board_state.cpp  board_state.h
src/shurikens/: data.h  logger.cpp  logger.h  model.cpp  model.h  runner.cpp  runner.h
src/shurikens/data/: data.h  easy.cpp  real.cpp  trivial.cpp
src/shurikens/solver/: breadth_search_solver.cpp  breadth_search_solver.h  depth_search_solver.cpp  depth_search_solver.h  solver.h  threaded_search_solver.cpp  threaded_search_solver.h
src/solver/: board_solver.h  brute_force_board_solver.cpp  brute_force_board_solver.h  heuristic_board_solver.cpp  heuristic_board_solver.h
src/sudoku/: runner.cpp
src/sudoku/data/: board_data.h  easy.cpp  trivial.cpp
src/sudoku/model/: board.cpp  board.h
src/sudoku/solver/: brute_force_board_solver.cpp  brute_force_board_solver.h  heuristic_board_solver.cpp  heuristic_board_solver.h  solver.h
src/sudoku/view/: board_logger.cpp  board_logger.h
src/view/: board_logger.cpp  board_logger.h
tests/common/: arbitrary_container_test.cpp  containers_test.cpp  numbers_test.cpp  strings_test.cpp  twobitstorage_test.cpp
tests/common/numbers/: integer_test.cpp  integers_test.cpp  rational_test.cpp
tests/cpic/: cpic_all_test.cpp
tests/cpic/model/: board_builder_test.cpp  board_solver_test.cpp  board_solver_test.h  cpic_board_builder_test.cpp  cpic_board_solver_test.cpp  cpic_board_solver_test.h  cpic_board_state_test.cpp  cpic_board_test.cpp
tests/leetcode/: ex10_regex_test.cpp  ex8_atoi_test.cpp
tests/maths/: maths_expressions_test.cpp  maths_josephus_test.cpp  maths_primes_test.cpp  maths_sequences_test.cpp  maths_stepping_stones_test.cpp
tests/minesweeper/: minesweeper_all_test.cpp
tests/minesweeper/model/: minesweeper_board_test.cpp
tests/model/: board_builder_test.cpp  board_solver_test.cpp  board_solver_test.h  board_test.cpp
tests/shurikens/: shurikens_model_test.cpp
tests/sudoku/: sudoku_all_test.cpp
tests/sudoku/model/: sudoku_board_test.cpp  sudoku_board_validity_test.cpp  test_data.h
web/: .eslintrc.yml  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: App.css  App.tsx
web/src/components/: GuessesGrid.css  GuessesGrid.tsx  GuessesGridRows.css  GuessesGridRows.tsx  Keyboard.css  Keyboard.tsx  KeyboardReader.tsx  WordGuessingGame.tsx
web/src/lib/: WordGuessingConstants.tsx  WordValidator.test.tsx  WordValidator.tsx
(+9 files in other folders)
